Сделать тесты более обширными